--- a/manifests/mds.yaml
+++ b/manifests/mds.yaml
@@ -1,10 +1,10 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: pnfs-mds
+  name: mds
   namespace: pnfs
   labels:
-    app: pnfs-mds
+    app: mds
     tier: node
 spec:
   selector:
@@ -63,11 +63,12 @@ status: {}
 apiVersion: v1
 kind: Service
 metadata:
-  name: pnfs-mds
+  name: mds
+  namespace: pnfs
 spec:
   selector:
-    app: pnfs-mds
-  clusterIP: None
+    app: mds
+#  clusterIP: None
   ports:
   - name: nfs
     port: 2049
